--- a/index.html
+++ b/index.html
@@ -93,32 +93,51 @@
 
         .instruction-item {
             display: flex;
+            flex-direction: column;
             align-items: center;
+            text-align: center;
             gap: 1rem;
-            padding: 1rem;
+            padding: 1.5rem 1rem;
             background: rgba(30, 30, 30, 0.5);
             border-radius: 8px;
             border: 1px solid #444444;
+            min-height: 140px;
+            justify-content: flex-start;
         }
 
         .step {
             background: #666666;
             color: #ffffff;
-            width: 30px;
-            height: 30px;
+            width: 35px;
+            height: 35px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: 600;
-            font-size: 0.9rem;
+            font-size: 1rem;
             flex-shrink: 0;
+        }
+
+        .instruction-item .content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .instruction-item h4 {
+            color: #ffffff;
+            font-size: 0.95rem;
+            font-weight: 600;
+            margin: 0 0 0.5rem 0;
         }
 
         .instruction-item p {
             margin: 0;
             color: #cccccc;
-            font-size: 0.95rem;
+            font-size: 0.9rem;
+            line-height: 1.4;
         }
 
         .note {
@@ -426,18 +445,23 @@
             }
 
             .instruction-item {
-                padding: 0.8rem;
+                padding: 1.2rem 0.8rem;
                 gap: 0.8rem;
+                min-height: 120px;
             }
 
             .step {
-                width: 25px;
-                height: 25px;
-                font-size: 0.8rem;
+                width: 30px;
+                height: 30px;
+                font-size: 0.9rem;
+            }
+
+            .instruction-item h4 {
+                font-size: 0.9rem;
             }
 
             .instruction-item p {
-                font-size: 0.9rem;
+                font-size: 0.85rem;
             }
 
             .upload-area {
@@ -508,10 +532,23 @@
                 flex-direction: column;
                 text-align: center;
                 gap: 0.5rem;
+                min-height: 100px;
+                padding: 1rem 0.5rem;
             }
 
             .step {
                 align-self: center;
+                width: 25px;
+                height: 25px;
+                font-size: 0.8rem;
+            }
+
+            .instruction-item h4 {
+                font-size: 0.85rem;
+            }
+
+            .instruction-item p {
+                font-size: 0.8rem;
             }
         }
     </style>
@@ -529,19 +566,31 @@
                     <div class="instruction-grid">
                         <div class="instruction-item">
                             <span class="step">1</span>
-                            <p>Faça upload de uma planilha Excel (.xlsx, .xls) ou CSV</p>
+                            <div class="content">
+                                <h4>Upload</h4>
+                                <p>Faça upload de uma planilha Excel (.xlsx, .xls) ou CSV</p>
+                            </div>
                         </div>
                         <div class="instruction-item">
                             <span class="step">2</span>
-                            <p><strong>Coluna 1:</strong> ID/Número do estudante</p>
+                            <div class="content">
+                                <h4>Coluna 1:</h4>
+                                <p>ID/Número do estudante</p>
+                            </div>
                         </div>
                         <div class="instruction-item">
                             <span class="step">3</span>
-                            <p><strong>Coluna 2:</strong> Nome do estudante</p>
+                            <div class="content">
+                                <h4>Coluna 2:</h4>
+                                <p>Nome do estudante</p>
+                            </div>
                         </div>
                         <div class="instruction-item">
                             <span class="step">4</span>
-                            <p><strong>Coluna 3+:</strong> Notas (escala 0-10)</p>
+                            <div class="content">
+                                <h4>Coluna 3+:</h4>
+                                <p>Notas (escala 0-10)</p>
+                            </div>
                         </div>
                     </div>
                     <p class="note">O sistema calculará automaticamente as estatísticas de aprovação e desempenho da turma.</p>
@@ -793,15 +842,19 @@
             });
 
             const failCount = totalStudents - passCount;
-            const passRate = ((passCount / totalStudents) * 100).toFixed(1);
-            const failRate = ((failCount / totalStudents) * 100).toFixed(1);
-            const classAverage = (totalGradeSum / totalGrades).toFixed(1);
-            const lowGradeRate = ((lowGradeCount / totalStudents) * 100).toFixed(1);
+            
+            // Calcular porcentagens com arredondamento correto
+            const passRate = Math.round((passCount / totalStudents) * 100);
+            const failRate = Math.round((failCount / totalStudents) * 100);
+            const lowGradeRate = Math.round((lowGradeCount / totalStudents) * 100);
+            
+            // Calcular média da turma com 1 casa decimal
+            const classAverage = Math.round((totalGradeSum / totalGrades) * 10) / 10;
 
             // Atualizar interface principal
             document.getElementById('passRate').textContent = passRate + '%';
             document.getElementById('failRate').textContent = failRate + '%';
-            document.getElementById('avgGrade').textContent = classAverage;
+            document.getElementById('avgGrade').textContent = classAverage.toFixed(1);
             document.getElementById('lowGrades').textContent = lowGradeRate + '%';
 
             // Atualizar estatísticas do rodapé
